Новая миграуция из директорий
