# app/Http/Controllers/Api/ExpectedRevenueController.php
@@ -131,6 +131,7 @@ class ExpectedRevenueController extends Controller
      *        type="object",
      *        required={""},
      *          @OA\Property(property="company_name",description="Название компании", type="text", example=""),
+     *          @OA\Property(property="short_name",description="Название компании", type="text", example=""),
      *          @OA\Property(property="mount",description="0", type="text", example="Август"),
      *          @OA\Property(property="sum",description="0", type="number", example="0"),
      *          @OA\Property(property="company_id",description="0", type="number", example="17"),
@@ -144,6 +145,7 @@ class ExpectedRevenueController extends Controller
      *             type="object",
      *          @OA\Property(property="id", type="number", example="1"),
      *          @OA\Property(property="company_name",description="Название компании", type="text", example=""),
+     *          @OA\Property(property="short_name",description="Название компании", type="text", example=""),
      *          @OA\Property(property="mount",description="0", type="text", example="Август"),
      *          @OA\Property(property="sum",description="0", type="number", example="0"),
      *          @OA\Property(property="company_id",description="0", type="number", example="17"),
@@ -232,6 +234,7 @@ class ExpectedRevenueController extends Controller
      *        type="object",
      *        required={""},
      *          @OA\Property(property="company_name",description="Название компании", type="text", example=""),
+     *          @OA\Property(property="short_name",description="Название компании", type="text", example=""),
      *          @OA\Property(property="mount",description="0", type="text", example="Август"),
      *          @OA\Property(property="sum",description="0", type="number", example="0"),
      *          @OA\Property(property="company_id",description="0", type="number", example="17"),
@@ -245,6 +248,7 @@ class ExpectedRevenueController extends Controller
      *             type="object",
      *          @OA\Property(property="id", type="number", example="1"),
      *          @OA\Property(property="company_name",description="Название компании", type="text", example=""),
+     *          @OA\Property(property="short_name",description="Название компании", type="text", example=""),
      *          @OA\Property(property="mount",description="0", type="text", example="Август"),
      *          @OA\Property(property="sum",description="0", type="number", example="0"),
      *          @OA\Property(property="company_id",description="0", type="number", example="17"),
