# app/Http/Controllers/Api/OperationalPlanController.php
@@ -107,7 +107,8 @@ class OperationalPlanController extends Controller
      *        required={""},
      *          @OA\Property(property="company_name",description="Название компании", type="text", example=""),
      *          @OA\Property(property="short_name",description="Название компании", type="text", example=""),
-     *          @OA\Property(property="plan_1",description="0", type="number", example="0"),
+     *          @OA\Property(property="company_id",description="0", type="number", example="0"),
+     *          @OA\Property(property="year",description="0", type="number", example="0"),
      *          @OA\Property(property="plan_2",description="0", type="number", example="0"),
      *          @OA\Property(property="plan_3",description="0", type="number", example="0"),
      *          @OA\Property(property="plan_4",description="0", type="number", example="0"),
@@ -129,6 +130,8 @@ class OperationalPlanController extends Controller
      *          @OA\Property(property="id", type="number", example="1"),
      *          @OA\Property(property="company_name",description="Название компании", type="text", example=""),
      *          @OA\Property(property="short_name",description="Название компании", type="text", example=""),
+     *          @OA\Property(property="company_id",description="0", type="number", example="0"),
+     *          @OA\Property(property="year",description="0", type="number", example="0"),
      *          @OA\Property(property="plan_1",description="0", type="number", example="0"),
      *          @OA\Property(property="plan_2",description="0", type="number", example="0"),
      *          @OA\Property(property="plan_3",description="0", type="number", example="0"),
@@ -226,6 +229,8 @@ class OperationalPlanController extends Controller
      *        required={""},
      *          @OA\Property(property="company_name",description="Название компании", type="text", example="Тест"),
      *          @OA\Property(property="short_name",description="Название компании", type="text", example=""),
+     *          @OA\Property(property="company_id",description="0", type="number", example="0"),
+     *          @OA\Property(property="year",description="0", type="number", example="0"),
      *          @OA\Property(property="plan_1",description="0", type="number", example="0"),
      *          @OA\Property(property="plan_2",description="0", type="number", example="0"),
      *          @OA\Property(property="plan_3",description="0", type="number", example="0"),
@@ -248,6 +253,8 @@ class OperationalPlanController extends Controller
      *          @OA\Property(property="id", type="number", example="1"),
      *          @OA\Property(property="company_name",description="Название компании", type="text", example=""),
      *          @OA\Property(property="short_name",description="Название компании", type="text", example=""),
+     *          @OA\Property(property="company_id",description="0", type="number", example="0"),
+     *          @OA\Property(property="year",description="0", type="number", example="0"),
      *          @OA\Property(property="plan_1",description="0", type="number", example="0"),
      *          @OA\Property(property="plan_2",description="0", type="number", example="0"),
      *          @OA\Property(property="plan_3",description="0", type="number", example="0"),
