# app/Models/ExpectedRevenue.php
@@ -18,6 +18,7 @@ class ExpectedRevenue extends Model
 
     protected $fillable=[
         "company_name",
+        "short_name",
         "company_id",
         "year",
         "mount",
